--- a/content/guides/deps_and_cli.adoc
+++ b/content/guides/deps_and_cli.adoc
@@ -22,159 +22,127 @@ The Clojure 1.9 release for the first time requires multiple artifacts to run Cl
 
 Maven-artifacts-first orientation of current tooling has created great rigidity and friction for dev processes - making it hard to e.g. work with libs not yet building/publishing artifacts (new users!), work on speculative changes w/o artifacts, working on mutual changes across multiple libs, give control to a 3rd party tool to manage shared dependencies, and to directly leverage git which is now widely used as a source of truth for code lifecycles.
 
-== Installation
+== Consider the Classpath
 
-=== Installation on Mac via `brew`
+Our ultimate goal is to build a JVM classpath. The classpath consists of a series of roots, either a directory path or the path to a jar file. Classes (and Clojure files) map via package or namespace to a relative path. For example, the `java.lang.String` class can be found at path `java/lang/String.class` and the `clojure.set` Clojure file can be found at paths `clojure/set.class` (for AOT), `clojure/set.clj`, or `clojure/set.cljc`. When the JVM needs to load one of these files it searches each root for the relative path and loads it if found.
 
-The latest development version of the Clojure scripts can be installed by selecting the `devel` version of Clojure as follows:
+Classpaths are needed any time we start a JVM which covers many different scenarios. We might want to spin up a REPL disconnected from a project, or run a project REPL including external dependencies and project paths, or execute our tests with extra jars and source, etc. We need tools that let us handle all of these cases by composing different operations.
 
-[source,shell]
-----
-brew install --devel clojure
-----
+=== Resolving Dependencies
 
-If you omit the `--devel` you will instead get the latest stable version of Clojure, currently 1.8.0.
+Much of the complexity in building the classpath comes from traversing external dependencies and downloading their artifacts (jar files) for inclusion on the classpath. Maven repositories provide an immutable, append-only, redundant store of named and versioned artifacts, which effectively defines the Java library ecosystem.
 
-=== Installation on Linux
+However, defining libraries and artifacts only in Maven terms unnecessarily limits us from a Clojure perspective. Clojure doesn't care at all about artifacts, and in fact Clojure doesn't even need source to be "built" at all to be useful. Maven (and build systems that depend solely on and deploy solely to Maven) have entangled dependency management with artifact production. We would like to retain the ability to use Maven artifacts while also not restricting ourselves solely to libraries built and deployed into Maven.
 
-Package installers - COMING SOON
+The first step in our classpath building process is to resolve the transitive set of dependencies aka `resolve-deps`. The primary input to this process is a list of immediate dependencies. Dependencies are described using the Maven "coordinates" - the groupID, artifactID, and version that describe a library and allow it to be located in a Maven repository. 
 
-The following process can be used to manually install the latest devel version of the `clj` script on a *nix system.
-
-[source,shell]
-----
-# Download and extract the tar file in any scratch directory
-mkdir scratch
-cd scratch
-curl -O https://download.clojure.org/install/brew/clojure-scripts.tar.gz
-tar xzf clojure-scripts.tar.gz
-
-# Install the scripts to a directory (that must exist or be created)
-export CLJ_SCRIPTS=$HOME/clojure-scripts
-mkdir -p $CLJ_SCRIPTS
-./install.sh $CLJ_SCRIPTS
-
-# Add scripts to your path
-export PATH=$PATH:$CLJ_SCRIPTS/bin
-----
-
-Note that you will need to remove the scripts above from your path when package installers are available. 
-
-=== Installation on Windows
-
-COMING SOON
-
-== Usage
-
-Usage:
-
-* `clojure [<clj_opts>] [<dep_opts>] [<main_opts>]`
-* `clj [<jvm_opts>] [<dep_opts>] [<main_opts>]`
-
-where:
-
-* `clojure` is the primary script. `clj` is a wrapper for interactive repl use. 
-* `jvm_opts` is 0 or more of the following:
-** `-Jopt` - passes `opt` through to the JVM, ex: `-J-server`
-* `dep_opts` is any of the following (but each at most once):
-** `-Ralias...` - concatenated resolve-args aliases, ex: `-R:bench:1.9`
-** `-Calias...` - concatenated classpath-override aliases, ex: `-C:dev`
-** `-Spath` - compute classpath and show it, without running Clojure
-** `-Srepro` - use only the local deps.edn (ignore install and user deps.edn)
-** `-Sforce` - force recomputation of the classpath (ignore the cache)
-** `-Sverbose` - print important paths while running the clojure script
-* `main_opts` are the `clojure.main` arguments, see [docs](https://clojure.org/reference/repl_and_main)
-
-The `clojure` and `clj` scripts ultimately construct and invoke a command-line of the form:
-
-[source,shell]
-----
-java <java_opts> -cp <classpath> clojure.main <main_opts>
-----
-
-The `dep_opts` are used to compute the `<classpath>` in this final invocation. Classpaths are cached (except when using `-P`) - see the section on classpath caching below for more details. When a classpath is not available, the following process is used to construct the classpath:
-
-* Compute the deps map
-** Read the deps.edn file in the following locations:
-*** Install directory (unless -Srepro)
-*** Config directory (if it exists and unless -Srepro)
-*** Current directory (if it exists)
-** Combine the deps.edn maps in that order with `merge-with merge`
-* Compute the resolve-deps args
-** If `-R` specifies one or more aliases, find each alias in the deps map `:aliases`
-** `merge-with` `merge` the alias maps - the result is the resolve-args map
-* Invoke `resolve-deps` with deps map and resolve-args map
-* Compute the classpath-overrides map
-** If `-C` specifies one or more aliases, find each alias in the deps map `:aliases`
-** `merge` the classpath-override alias maps
-* Invoke `make-classpath` with the libs map returned by `resolve-deps`, the paths, and the classpath-args map
-* Write the libs map to the classpath cache
-* Write the classpath to the classpath cache
-
-== deps.edn
-
-The deps.edn file is an instance of the `::deps-map` https://github.com/clojure/tools.deps.alpha/blob/master/src/main/clojure/clojure/tools/deps/alpha/specs.clj[spec]. The full spec is defined below:
-
-[cols="3<*", options="header", role="table"]
-|===
-| Spec name | Definition | Description |
-| `::deps-map` | `(s/keys :opt-un [::paths ::deps ::aliases])` | The deps.edn format |
-| `::paths` | `(s/coll-of string? :kind vector? :into [])` | Paths in current project to include in classpath |
-| `::deps` | `(s/map-of ::lib ::coord)` | Dependencies, a map from lib to (optional) coord |
-| `::lib` | `symbol?` | A library like `org.clojure/core` or `criterium` |
-| `::coord` | `(s/or :mvn :mvn/coord :local :local/coord)` | The coordinate of different types. |
-| `::aliases` | `(s/map-of ::alias (s/or :resolve-deps ::resolve-args :make-classpath ::classpath-args))` | Aliases for use at the command line |
-| `::alias` | `keyword?` | The command line alias to use with `clj -R` or `clj -C` |
-| `::resolve-args` | `(s/keys :opt-un [::extra-deps ::override-deps ::default-deps])` | Dep modifications to pass to `resolve-deps` |
-| `::extra-deps` | `(s/map-of ::lib ::coord)` | Dependencies to add to the initial set |
-| `::override-deps` | `(s/map-of ::lib ::coord)` | If dep is found when expanding deps, use this coordinate, regardless of what is specified |
-| `::default-deps` | `(s/map-of ::lib ::coord)` | If dep is found when expanding deps and no coordinate is provided, use this coordinate |
-| `::classpath-args` | `(s/keys :opt-un [::classpath-overrides ::extra-paths])` | Classpath modifications to pass to `make-classpath` |
-| `::classpath-overrides` | `(s/map-of ::lib ::path)` | Override paths to use for libraries, passed to `make-classpath` |
-| `::extra-paths` | `(s/coll-of string? :kind vector? :into [])` | Collection of extra paths to add to the classpath in addition to ::paths |
-| `::mvn/repos` | `(s/map-of ::repo-id ::repo)` | Maven provider repo config |
-| `::repo-id` | `string?` | Repository name |
-| `::repo` | `(s/keys :opt-un [::url])` | A Maven repository configuration |
-| `::url` | `string?` | A Maven repository url |
-|===
-
-Example:
+However, we think it is important to separate the groupID and artifactID (which describe which library you care about) and the version, which is really part of resolution process. Thus the intial dependencies are a map of library to coordinate, where a coordinate is a provider-specific representation of the requested version.
 
 [source,clojure]
 ----
 {
- ;; Paths in project
- :paths ["src"]
+  org.clojure/clojure {:mvn/version "1.9.0-beta1"}
+  org.clojure/core.cache {:mvn/version "0.6.5"}
+}
+----
 
- ;; Project dependencies, a map from lib to coordinate
+When these are persisted into a configuration (more on that later), they are stored under a top-level `:deps` key:
+
+[source,clojure]
+----
+{
  :deps {
-   org.clojure/clojure {:mvn/version "1.8.0"}
-   ring {:mvn/version "1.5.0"}
-   hiccup {:mvn/version "1.0.5"}
- }
-
- ;; Aliases that can be used with -R and -C
- :aliases {
-   ;; An alias that adds an extra dep to use for benchmarking: -R:bench
-   :bench {:extra-deps {criterium {:mvn/version "0.4.4"}}}
-
-   ;; An alias to override the default Clojure version: -R:1.9
-   :1.9 {:override-deps {org.clojure/clojure {:mvn/version "1.9.0-alpha20"}}}
-
-   ;; A classpath override alias to use a local build of Clojure: -C:dev
-   :dev {:classpath-overrides {org.clojure/clojure "/Users/me/clojure/target/classes"}}
-
-   ;; Add extra paths to the classpath: -C:test
-   :test {:extra-paths ["test"]}
- }
-
- ;; Configure Maven repos - these are typical set in the system deps.edn only
- :mvn/repos {
-   "central" {:url "https://repo1.maven.org/maven2/"}
-   "clojars" {:url "https://clojars.org/repo/"}
+   org.clojure/clojure {:mvn/version "1.9.0-beta1"}
+   org.clojure/core.cache {:mvn/version "0.6.5"}
  }
 }
 ----
+
+
+The `resolve-deps` code will use the library and coordinate to locate and retrieve the metadata for the specified artifact, including its transitive dependencies. The complete operation will walk the transitive dependencies as well, discovering the entire tree (cycles are cut) representing the full transitive dependency set.
+
+Once the tree has been expanded, `resolve-deps` will cut any excluded dependencies (a feature of Maven), resolve incompatible versions (generally by choosing the newest one), then downloading all of the dependent artifacts to some location on disk. Finally, a data structure called a *lib map* is returned:
+
+[source,clojure]
+----
+{org.clojure/clojure           {:mvn/version "1.8.0"
+                                :path ".../clojure-1.8.0.jar"}
+ org.clojure/core.cache        {:mvn/version "0.6.5"
+                                :path  ".../core.cache-0.6.5.jar"} 
+ org.clojure/data.priority-map {:mvn/version "0.0.7"
+                                :dependents [org.clojure/core.cache]}}
+----
+
+The lib map lists all libraries and their selected coordinate, which will contain a `:path` on disk and a list of dependents that caused it to be included. Here you can see that `data.priority-map` was discovered as a dependency of core.cache.
+
+=== Modifying the dependency set
+
+There are a number of reasons to alter the default transitive dependency set and `resolve-deps` supports a second resolve-args map to provide modifications to the base dependency set.
+
+==== Adding extra dependencies
+
+One of the most obvious cases is where you want to add extra artifacts to the classpath to augment the normal external dependencies. One common use case is to add dependencies for a special kind of test, for example adding a benchmark library like criterium when building a classpath to run some benchmarks. This option can be specified with `:extra-deps` which takes a lib map:
+
+[source,clojure]
+----
+{:extra-deps {criterium/criterium {:mvn/version "0.4.4"}}}
+----
+
+==== Overriding the coordinate
+
+In some cases you may wish to override the normal version resolution decision and instead force a specific coordinate version for a library. For example, say you wanted to run a test to see if your application worked with a beta version of Clojure. In this case, rather than modifying the base set of dependencies, you can specify an override:
+
+[source,clojure]
+----
+{:override-deps {org.clojure/clojure {:mvn/version "1.9.0-beta1"}}}
+----
+
+==== Specifying default coordinates
+
+When using multiple projects, you may wish to specify a set of default dependency coordinates to use when no coordinate is specified. These can be provided using `:default-deps`:
+
+[source,clojure]
+----
+{:default-deps {org.clojure/core.cache {:mvn/version "0.6.4"}}}
+----
+
+==== Aliases
+
+One or more of these dependency modifications can be stored in the configuration in a top-level alias map:
+
+[source,clojure]
+----
+{
+ :aliases {
+   :benchmark {:extra-deps {criterium/criterium {:mvn/version "0.4.4"}}}
+   :beta      {:override-deps {org.clojure/clojure {:mvn/version "1.9.0-beta1"}}}
+   :defaults  {:default-deps {org.clojure/core.cache {:mvn/version "0.6.4"}}}
+ }
+}
+----
+
+=== Building the classpath
+
+The second step is to actually build the classpath. The primary inputs to this process are the libs map (the result of resolve-deps), the internal paths of the current project (typically directories that specify source paths). The paths are a collection of string paths, represented in the configuration file as:
+
+[source,clojure]
+----
+{
+ :paths ["src"]
+}
+----
+
+=== Modifying the classpath
+
+In addition to the modifications that can be done in the 
+
+
+
+
+
+== Persisting dependency configuration
+
+
 
 == Examples
 
@@ -325,49 +293,6 @@ A repository of library artifacts - e.g. Maven central or Clojars
 **Requires and imports**
 
 Mentions in source code of library (sub)components that must be in the classpath in order to succeed. namespace and package/class names are transformed into path components.
-
-== Environment
-
-The `clojure` and `clj` scripts rely on several directories and optionally on several environment variables. In general, as a new user of `clj`, you can ignore this section as everything is taken care of by default.
-
-* scripts directory
-** Created during installation
-** Contents:
-*** `bin/clojure` - main script
-*** `bin/clj` - wrapper script for interactive repl use (uses `rlwrap`)
-*** `deps.edn` - install level deps.edn file, with some default deps (Clojure, etc)
-*** `example-deps.edn` - commented example that gets copied to `<config_dir>/deps.edn`
-*** `libexec/clojure-scripts-X.Y.Z.jar` - uberjar invoked by `clojure` to construct classpaths
-* config directory
-** Can be created to hold a deps.edn file that carries across installation upgrades and takes affect across projects
-** Locations checked in this order:
-*** If `$CLJ_CONFIG` is set, then use `$CLJ_CONFIG` (explicit override)
-*** If `$XDG_CONFIG_HOME` is set, then use `$XDG_CONFIG_HOME/clojure` (follows Freedesktop conventions)
-*** Else use `$HOME/.clojure`
-** Contents:
-*** `deps.edn` - user deps file, defines default Clojure version and provider defaults
-* cache directory
-** Lazily created if `clojure` is invoked without a local `deps.edn` file. Locations checked in this order:
-*** If `$CLJ_CACHE` is set, then use `$CLJ_CACHE` (explicit override)
-*** If `$XDG_CACHE_HOME` is set, then use `$XDG_CACHE_HOME/clojure` (follows Freedesktop conventions)
-*** Else use `config_dir/.cpcache`
-** Contents:
-*** See the section below on classpath caching
-
-== Classpath caching
-
-Classpath files are cached in the current directory under `.cpcache/`. File are of two forms:
-
-* `.cpcache/<hash>.libs` - a `::lib-map` in the https://github.com/clojure/tools.deps.alpha/blob/master/src/main/clojure/clojure/tools/deps/alpha/specs.clj[specs], the output of running `resolve-deps`
-* `.cpcache/<hash>.cp` - a classpath string, the output of `make-classpath`
-
-where the `<hash>` is based on the config file paths, the resolve-aliases, and the classpath aliases.
-
-The cached classpath file is used when:
-
-* It exists
-* It is newer than `deps.edn`
-* It is newer than all of the existing config files
 
 == Links
 
